maze.lessons.maze.island.IslandMaze.scala.error
Escaper:12: error: type mismatch;
 found   : String("true && estFaceMur()")
 required: Boolean
				case "true && estFaceMur()" => gauche(); gauche(); avance();
                                     ^